# vllm.rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  LICENSE.txt  PyPi.md  ReadMe-CN.md  ReadMe.md  build.rs  build.sh  build_docker.sh  builder.Dockerfile  myproject.toml  run.sh  test_model.py  vllm_rs.pyi
.cursor/skills/add-model/: SKILL.md
.cursor/skills/test-model/: SKILL.md
docs/: add_model.md  claude_code.md  context-cache.md  docker.md  embeddings.md  get_started.md  goose.md  guided_decoding.md  kilocode.md  llguidance-integration.md  mcp.md  mcp_tool_calling.md  mtp.md  multimodal.md  opencode.md  performance.md  prefix-cache.md  qwen3_5_architecture.md  reasoning.md  rust_crate.md  test_model.md  tokenizer_api.md  tool_calling.md  tool_parsing.md  xbot.md
docs/plan/: cutlass_moe_integration_guide.md  optimization_research_report.md  trtllm_gemm_integration_guide.md
example/: chat.py  completion.py  mcp.json  server.py  tokenize.py  tool_calling.py  tool_prompt.json
example/claude/: config.yaml  settings.json
example/opencode/: config.json
example/rust-demo/: Cargo.toml
example/rust-demo-tokenize/: Cargo.toml
example/rust-demo-tokenize/src/: main.rs
example/rust-demo-tools/: .gitignore  Cargo.toml
example/rust-demo-tools/src/: main.rs
example/rust-demo/src/: main.rs
example/special-tokens-extraction/: Cargo.toml  README.md
example/special-tokens-extraction/src/: main.rs
examples/: rust_basic.rs  rust_chat.rs  rust_multimodal.rs
python/: ReadMe.md
src/: api.rs  lib.rs  main.rs
src/core/: block_manager.rs  dflash_drafter.rs  engine.rs  fingerprint.rs  graph.rs  mod.rs  prefix_cache.rs  runner.rs  scheduler.rs  sequence.rs
src/mcp/: client.rs  manager.rs  mod.rs  server.rs  transport.rs
src/models/: deepseek.rs  deepseek3.rs  dflash.rs  gemma4.rs  glm4.rs  glm4_moe.rs  glm4_moe_lite.rs  gpt_oss.rs  llama.rs  minimax.rs  mod.rs  mtp.rs  phi4.rs  qwen3.rs  qwen3_5.rs  qwen3_5_attention.rs  qwen3_5_moe.rs  qwen3_moe.rs
src/models/gemma3/: config.rs  mod.rs
src/models/glm4_vl/: config.rs  mod.rs
src/models/layers/: attention.rs  deepstack.rs  deltanet.rs  distributed.rs  linear.rs  mask.rs  mla_attention.rs  mlp.rs  mod.rs  moe.rs  others.rs  rotary_emb.rs  wna16.rs
src/models/llama4/: config.rs  mod.rs  vision.rs
src/models/mistral3_vl/: config.rs  mod.rs  vision.rs
src/models/qwen3_vl/: config.rs  input.rs  mod.rs  vision.rs
src/py/: mod.rs
src/runner/: mod.rs  runner.rs  tok_detok_msgs.rs  tok_detok_socket.rs  tok_detok_worker.rs
src/server/: claude_server.rs  logger.rs  mod.rs  parser.rs  server.rs  streaming.rs
src/tools/: helpers.rs  mod.rs  parser.rs  schema.rs
src/transfer/: comm.rs  cuda_remote.rs  mod.rs
src/utils/: chat_template.rs  command.rs  config.rs  downloader.rs  env.rs  gguf_helper.rs  gguf_varbuilder.rs  gptq.rs  graph.rs  guidance.rs  guidance_grammar.rs  guidance_tests.rs  heartbeat.rs  image.rs  kvcache_allocator.rs  logits_processor.rs  mod.rs  progress.rs  reasoning.rs  special_tokens.rs
src/utils/metrics/: cpu.rs  metrics_macros.rs  mod.rs  nvml.rs  prometheus.rs  record.rs
