[package]
name = "vllm-rs"
version = "0.2.6"
edition = "2021"
default-run = "vllm-rs"

[dependencies]
candle-core = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "42c9b42" }
candle-nn = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "42c9b42" }
serde = { version = "1.0.190", features = ["serde_derive"] }
tokenizers = {version = "0.21.2", features = ["http"] }
candle-transformers = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "42c9b42" }
hf-hub = "0.4.1"
anyhow = "1.0.75"
itertools = "0.13.0"
akin = "0.4.0"
indicatif = "0.17.11"
serde_json = "1.0.108"
half = { version = "2.5.0", features = ["num-traits", "use-intrinsics", "rand_distr"] }
tokio = { version = "1.38.0", features = ["sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
either = { version = "1.13.0", features = ["serde"] }
minijinja = { version = "2.10.2", features = ["builtins", "json"] }
minijinja-contrib = { version = "2.10.2", features = ["pycompat"] }
lazy_static = {version = "1.4.0"}
interprocess = "2.2.2"
serde-big-array = "0.5.1"
bincode = { version = "1.3.1" }
twox-hash = "2.1.1"
rand = "0.9.0"
rayon="1.10.0"
clap = { version = "4.4.7", features = ["derive"] }
thiserror = "1.0.58"
ahash = "0.8.11"
reedline = "0.40.0"
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py38"], optional = true }
parking_lot = "0.12.4"
attention-rs = {git = "https://github.com/guoqingbao/attention.rs.git", version="0.1.1", rev = "3058c20" }
once_cell = "1.21.3"
tqdm = "0.8.0"
futures = "0.3.31"
crossbeam = "0.8.4"
ctrlc = "3.4.7"
dirs = "5.0.1"
base64 = "0.22.1"
uuid = { version = "1.5.0", features = ["v4"] }

[lib]
name = "vllm_rs"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]  # cdylib needed for python extension

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "attention-rs/cuda"]
nccl = ["candle-core/nccl"]
graph = ["cuda", "attention-rs/graph", "candle-core/graph"]
flash-attn = ["attention-rs/flash-attn", "attention-rs/flash-decoding", "attention-rs/flash-context"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal", "attention-rs/metal"]
python = ["pyo3"]

[[bin]]
name = "runner"
path = "src/runner/runner.rs"