[package]
name = "rust-demo"
version = "0.0.1"
edition = "2021"
default-run = "rust-demo"

[dependencies]
anyhow = "1.0.100"
vllm_rs = { path = "../../", package = "vllm-rs" }

[features]
cuda = ["vllm_rs/cuda"]
flashattn = ["vllm_rs/flashattn"]
flashinfer = ["vllm_rs/flashinfer"]
graph = ["vllm_rs/graph"]
nccl = ["vllm_rs/nccl"]
metal = ["vllm_rs/metal"]



